:wheelchair: Fix contrast of toggle button

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -110,8 +110,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 #portfolio-filter {
         margin-top: 50px;
 }
-.navbar-toggle i {
-    color: #BCCCBF;
+.navbar-toggle .fa-bars {
+    color: #FFFFFF;
 }
 .menu .list-group-item-heading, .menu .list-group-item-text{
     color:#fff!important;
